# pulse-services-desktop

./: index.html
.github/workflows/: build.yml  tauri-windows-portable.yml
pulse-services-desktop/: package.json
pulse-services-desktop/src-tauri/: Cargo.toml
pulse-services-desktop/src-tauri/src/: main.rs
src/: App.jsx  index.css
src-tauri/: tauri.conf.json
